# skin-mixer

./: .eslintcache  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  CatalogueElement.tsx  ElementCatalogue.tsx  ElementList.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  elem_type.rs  err.rs  globals.rs  main.rs  skinutils.rs
